syntax = "proto3";

option csharp_namespace = "CCM.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";

service PrivateClient {
  
    rpc CreatePrivateClient (CreatePrivateClientRequest) returns (PrivateClientDTO);
    rpc GetPrivateClient (GetRequest) returns (NullablePrivateClientDTO);
    rpc UpdatePrivateClient (UpdatePrivateClientRequest) returns (PrivateClientDTO);
    rpc DeletePrivateClient(PrivateClientDTO) returns (google.protobuf.Empty);
}


message PrivateClientDTO{
	int32 id = 1;
	string name = 2;
	string cI = 3;
	int age = 4;
}

message NullablePrivateClientDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		PrivateClientDTO privateclient = 2;
	}
}

message CreatePrivateClientRequest{
	string name = 1;
	string cI = 2;
	int age = 3;
}

